<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="40dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="10.17dp"
            android:src="@drawable/ic_im_contacts_search"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/im_contacts_search"
            android:textColor="#868989"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#E8EDF3"/>

    <TextView
        android:id="@+id/tv_verification"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:drawableLeft="@drawable/ic_im_contacts_verification"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:background="@drawable/btn_im_list_item"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/im_ver_msg"
        android:textColor="#2C2C2C"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#FFE8EDF3" />

    <TextView
        android:id="@+id/tv_group"
        android:layout_width="match_parent"
        android:background="@drawable/btn_im_list_item"
        android:layout_height="52dp"
        android:drawableLeft="@drawable/ic_im_contacts_group"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/im_group"
        android:textColor="#2C2C2C"
        android:textSize="16sp"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#FFE8EDF3"
        android:visibility="invisible" />

</LinearLayout>