<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="#000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_z_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@drawable/ic_scan_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/zxing_sys"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_z_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="12dp"
            android:src="@drawable/ic_scan_photo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:id="@+id/btn_z_scan_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_z_scan_light"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="12dp"
                android:src="@drawable/ic_scan_light_close" />

            <TextView
                android:id="@+id/tv_z_scan_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zxing_open_light"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_z_my_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_scan_my_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zxing_card"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_z_scan_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="12dp"
                android:src="@drawable/ic_scan_record" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zxing_list"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>