<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wight_grey">

    <com.fanchen.location.view.SensorMapView
        android:id="@+id/mv_main_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            style="@style/BaseMapInputCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_base_map"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp">

                <ImageView
                    android:id="@+id/iv_title_back"
                    style="@style/BaseMapBackImageView"
                    android:layout_width="@dimen/map_back_icon"
                    android:layout_height="@dimen/map_back_icon"
                    android:onClick="onClick" />

                <TextView
                    android:id="@+id/tv_address_map"
                    style="@style/BaseMapAddressTextView"
                    android:layout_width="fill_parent"
                    android:singleLine="true"
                    android:layout_height="fill_parent"
                    android:hint="@string/map_local" />
            </android.support.v7.widget.Toolbar>
        </android.support.v7.widget.CardView>
    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_goto"
        style="@style/BaseMapRightFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_marginRight="@dimen/map_base_margin">

        <LinearLayout
            android:layout_width="@dimen/map_nav_base_size"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_zoom_in"
                style="@style/BaseMapButton"
                android:layout_width="@dimen/map_nav_base_size"
                android:layout_height="@dimen/map_nav_base_size"
                android:onClick="onClick"
                android:text="@string/map_seekbar_add" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/wight_grey" />

            <Button
                android:id="@+id/bt_zoom_out"
                style="@style/BaseMapButton"
                android:layout_width="@dimen/map_nav_base_size"
                android:layout_height="@dimen/map_nav_base_size"
                android:onClick="onClick"
                android:text="@string/map_seekbar_minus" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_local"
        style="@style/BaseMapBottomFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick" />
</android.support.design.widget.CoordinatorLayout>
