<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="?attr/actionBarSize">

                <com.fanchen.location.view.FuckBaiduView
                    android:id="@+id/bmapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/wight_grey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/icon_marka" />

                <ImageView
                    android:id="@+id/iv_re_location"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp"
                    android:background="@mipmap/back_origin_normal" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:id="@+id/rl_map_title"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@mipmap/bt_icon_back"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:onClick="back"
                        android:paddingLeft="10dp"
                        android:scaleType="centerInside"
                        android:text="@string/bt_back"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:ellipsize="end"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:text="@string/location_message"
                        android:textColor="#ffffff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/btn_rtc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="3dp"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:padding="13dp"
                        android:text="@string/search"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:padding="13dp" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/wight_grey">

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/conversation_search_bg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_search_con" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/search"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/wight_grey"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>